First attempt auto JSON generation

--- a/gallery.html
+++ b/gallery.html
@@ -139,6 +139,7 @@
             <div class="container">
                 <div class="row" id="gallery" data-masonry='{"percentPosition": true }'>
                     <!-- Gallery is done by Gallery.js please look there if there are issues -->
+                    <!-- To add new images please place them within the gallery folder -->
                 </div>
             </div>
         </section>
