--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DMU Hackers - Static Bootstrap 5 Clone</title>
+    <title>DMU Hackers - Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -168,6 +168,9 @@
     <!-- Footer End -->
 
     <!-- Scripts -->
+    <!-- Masonry JS CDN -->
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <!-- Custom -->
     <script src="js/sidebar.js"></script>
     <script src="js/Gallery.js"></script>
     <!-- JS end -->
