Fixed Masonry issues on Gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -137,7 +137,7 @@
         <!-- Gallery Section Start -->
         <section id="gallery-section" class="section">
             <div class="container">
-                <div class="row" id="gallery" data-masonry='{"percentPosition": true }'>
+                <div class="row" id="gallery">
                     <!-- Gallery is done by Gallery.js please look there if there are issues -->
                     <!-- To add new images please place them within the gallery folder -->
                 </div>
@@ -168,8 +168,8 @@
     <!-- Footer End -->
 
     <!-- Scripts -->
-    <!-- Masonry JS CDN -->
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="js/masonry.pkgd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom -->
     <script src="js/sidebar.js"></script>
     <script src="js/Gallery.js"></script>
