--- a/legacy.html
+++ b/legacy.html
@@ -553,6 +553,9 @@
   </footer>
   <!-- Footer Section End -->
 
+
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Masonry JS CDN -->
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
   <!-- Custom JS -->
