--- a/P2P.html
+++ b/P2P.html
@@ -388,6 +388,7 @@
   </div>
   <!-- Footer Section End -->
   <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/sidebar.js"></script>
   <script src="js/P2P.js"></script>
 </body>
