Updated for Adams Changes

--- a/P2P.html
+++ b/P2P.html
@@ -79,10 +79,10 @@
         <div class="splash-widgets-3col">
           <div class="splash-widgets-leftcol">
             <div class="splash-widget splash-widget-topleft">
-              <h2>Pwn2Play: Silicon Siege <br>Capture the Flag (CTF)</br></h2>
+              <h2 class="section-title">Pwn2Play: Silicon Siege <br>Capture the Flag (CTF)</br></h2>
             </div>
             <div class="splash-widget splash-widget-bottomleft">
-              <img id="p2p-img" src="img/pwn2play/P2P.png" alt="P2P" class="img-fluid"
+              <img id="p2p-img" src="img/pwn2play/P2P_FirstBlood.png" alt="P2P" class="img-fluid"
                 style="max-width:210px; height:auto;" />
             </div>
           </div>
@@ -232,8 +232,7 @@
                     <i class="fas fa-shield-alt"></i>
                   </span>
                   <div>
-                    <div class="fw-bold fs-5">Silicon Siege<br><span class="fs-6 fw-normal text-light">Location</span>
-                    </div>
+                    <div class="fw-bold fs-5">Silicon Siege<br><span class="fs-6">Location</span></div>
                     <div>Gateway House Floor 5<br>De Montfort University<br>The Gateway Leicester, LE1 9BH</div>
                   </div>
                 </div>
@@ -258,8 +257,7 @@
                     <i class="fas fa-trophy"></i>
                   </span>
                   <div>
-                    <div class="fw-bold fs-5">Awards Event<br><span class="fs-6 fw-normal text-light">Location</span>
-                    </div>
+                    <div class="fw-bold fs-5">Awards Event<br><span class="fs-6">Location</span></div>
                     <div>De Montfort Students' Union<br>Campus Centre Building<br>Mill Ln, Leicester LE2 7DR</div>
                   </div>
                 </div>
