--- a/legacy.html
+++ b/legacy.html
@@ -62,7 +62,7 @@
         <div class="splash-widgets-3col">
           <div class="splash-widgets-leftcol">
             <div class="splash-widget splash-widget-topleft">
-              <h2>DMUHackers Legacy Committee</h2>
+              <h2 class="section-title">DMUHackers Legacy Committee</h2>
             </div>
             <div class="splash-widget splash-widget-bottomleft">
               <img src="img/site-content/logo.png" alt="DMU Hackers Logo" class="splash-logo">
