--- a/legacy.html
+++ b/legacy.html
@@ -557,7 +557,7 @@
   <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Masonry JS CDN -->
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script src="js/masonry.pkgd.js"></script>
   <!-- Custom JS -->
   <script src="js/sidebar.js"></script>
 </body>
