Legacy committee pages updates

--- a/legacy.html
+++ b/legacy.html
@@ -135,8 +135,8 @@
     <!-- Committee Section Start -->
     <section id="committee-section" class="section">
       <div class="container">
-        <div class="splash-widget p-4 mb-4" style="background: #2B3D41; border-radius: 16px;">
-          <h2 class="text-white mb-0" style="font-size: 1.7rem;">Previous committee's of DMUHackers</h2>
+        <div class="splash-widget p-4 mb-4" style="border-radius: 16px;">
+          <h2 class="section-title  mb-0" style="font-size: 1.7rem;">Previous committee's of DMUHackers</h2>>
         </div>
         <div class="accordion committee-accordion-shadow accordion-theme"
           id="committeeAccordion accordionPanelsStayOpenExample">
